#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(newbee, 1.0.0, 403562789@qq.com)
AM_INIT_AUTOMAKE([foreign])

# Checks for programs.
#AC_PROG_RANLIB
LT_INIT
AC_PROG_CXX
AC_PROG_LIBTOOL

AC_CONFIG_HEADERS([conf.h])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 mylib/Makefile
                 mylib/utility/Makefile
                 mylib/rpc/Makefile
                 mylib/log/Makefile
                 ])
AC_OUTPUT
